--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "knex": "^3.1.0",
+    "pg": "^8.16.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
