--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,12 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
-    "knex": "^3.1.0",
     "pg": "^8.16.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.31.0",
+    "eslint": "^9.31.0",
+    "globals": "^16.3.0",
     "nodemon": "^3.1.10"
   }
 }
